--- a/style.css
+++ b/style.css
@@ -98,8 +98,70 @@ margin-left: 50px;
     width: 500px;
   font-family: 'Tangerine', serif; 
 }
+.fa-bars{
+    font-size: 30px;
+    padding-right: 20px;
+    display: none;
+    float: right;
+    margin-top: 10px;
+}
 @media screen and (max-width: 400px) {
     nav {
       background-color: lightgreen;
+    }
+    .main{
+        width: 100%;
+        height: 500px;
+         margin-top: 2px;
+        background-color: rgb(255, 255, 255);
+        display: block;
+        padding-right: 50px;
+        justify-content: center;
+      
+        
+     }
+     nav{
+        width: 100%;
+     }
+     ul{
+width:200px;
+background-color: red;
+ 
+ 
+ 
+float: right;
+     }
+     .photo{
+        width: 10
+     }
+     .photo img{
+        width: 250px;
+        height: 250px;
+    padding-left: 50px;
+    rotate: 0deg;
+    padding-top: 70px;
+    margin-left: 50px;
+
+ 
+     
+        border-radius: 50%;
+     }
+     .main-conttaint .header h1{
+       
+       font-size: 30px;
+       font-weight:bolder;
+       padding-top: 80px;
+       width: 100%;padding-left: 20px;
+       font-family: 'Tangerine', serif;
+     }
+     .main-conttaint .header p{
+        font-size: 16px;
+        padding-left: 20px;
+        width:90%;
+        padding-top: 10px;
+      font-family: 'Tangerine', serif; 
+    }
+    .fa-bars{
+        display: block;
     }
   } 
