--- a/style.css
+++ b/style.css
@@ -98,14 +98,14 @@ margin-left: 50px;
     width: 500px;
   font-family: 'Tangerine', serif; 
 }
-.fa-bars{
+nav .fa-bars{
     font-size: 30px;
     padding-right: 20px;
     display:none;
     float: right;
     margin-top: 10px;
 }
-@media screen and (max-width: 330px) {
+@media screen and (max-width: 400px) {
     nav {
       background-color: lightgreen;
     }
@@ -161,7 +161,7 @@ float: right;
         padding-top: 10px;
       font-family: 'Tangerine', serif; 
     }
-    .fa-bars{
+    nav .fa-bars{
         display: block;
     }
   } 
